wip/ft_services/srcs/kustomization/telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
      - name: telegraf
        image: telegraf:alpine
        volumeMounts:
        - name: config
          mountPath: /etc/telegraf/
      volumes:
      - name: config
        configMap:
          name: telegraf-config
          items:
          - key: config
            path: telegraf.conf
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
