wip/ft_services/srcs/kustomization/nginx.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
          - name: wordpress-persistent-storage
            mountPath: /var/www/html
          - name: phpmyadmin-persistent-storage
            mountPath: /var/www/html/phpmyadmin
          - name: config
            mountPath: /etc/nginx/conf.d
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
      - name: phpmyadmin-persistent-storage
        persistentVolumeClaim:
          claimName: phpmyadmin-pv-claim
      - name: config
        configMap:
          name: nginx-config
          items:
          - key: config
            path: site.conf
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: nginx-https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: nginx
    tier: frontend
  type: NodePort
