wip/ft_services/srcs/kustomization/phpmyadmin.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      name: phpmyadmin
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin:fpm-alpine
          ports:
           - containerPort: 9000
          volumeMounts:
          - name: phpmyadmin-persistent-storage
            mountPath: /var/www/html
      volumes:
      - name: phpmyadmin-persistent-storage
        persistentVolumeClaim:
          claimName: phpmyadmin-pv-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  ports:
    - name: phpmyadmin-http
      protocol: TCP
      port: 5000
      targetPort: 9000
  selector:
    app: phpmyadmin
  type: NodePort
