wip/ft_services/srcs/kustomization/wordpress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: wordpress
          image: wordpress:fpm-alpine
          ports:
           - containerPort: 9000
          volumeMounts:
          - name: wordpress-persistent-storage
            mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - name: wordpress-http
      protocol: TCP
      port: 5050
      targetPort: 9000
  selector:
    app: wordpress
    tier: frontend
  type: NodePort
